# ex-motion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_kernel_source.cxx  main.cpp
doc/: fs_conf.md  fs_conf.schema.json
example/: cc_vid100.json  conf_chroma.json  conf_cross.json  conf_filter.json  conf_pose.json  conf_test.json  conf_vid100.json  conf_vid101.json  conf_vid102.json  conf_vid103.json  conf_vid104.json
kernels/: background.cl  background.h  bgs.cl  bgs.h  chroma_key.cl  chroma_key.h  color_space.cl  color_space.h  filter_conv.cl  filter_conv.h  flip_rotate.cl  flip_rotate.h  letter_box.h  subsense.cl  subsense.h
kernels/cl/: .clangd  background.cl  chroma_key.cl  color_space.cl  letter_box.cl  subsense.cl
models/blazepose/body/detector/: detection_q_f16.tflite
models/blazepose/body/whole/: landmark_full_q_i32.tflite  landmark_lite_q_f16.tflite
scripts/: dev_lpb_start.sh  dev_lpb_stop.sh  devmap.sh  embed_cl_kernel.cxx  embed_file.cxx  gen_pattern.py
sources/: a_updated_boot.cpp  blaze_pose.cpp  calibration.cpp  cam_params_window.cpp  cross.cpp  cv_utils.cpp  d_dummy_camera.cpp  delta_loop.cpp  dnn_common.cpp  eox_globals.cpp  extended_boot.cpp  file_boot.cpp  file_boot_cam.cpp  file_boot_gui.cpp  file_boot_logic.cpp  gl_image.cpp  gtk_boot.cpp  gtk_cam_params.cpp  gtk_config_stack.cpp  json_config.cpp  json_ocv.cpp  low_pass_filter.cpp  pose.cpp  pose_detector.cpp  pose_pipeline.cpp  pose_pipeline_aux.cpp  pose_pipeline_debug.cpp  pose_roi.cpp  simple_image_window.cpp  simple_shader.cpp  small_button.cpp  ssd_anchors.cpp  stereo_camera.cpp  texture_1.cpp  thread_pool.cpp  timer.cpp  triangulation.cpp  updated_boot.cpp  velocity_filter.cpp
sources/core/: a_filter.cpp  a_updated_boot.cpp  bg_lbp_subtract.cpp  bg_subtract.cpp  blaze_pose.cpp  blur.cpp  body_detector.cpp  body_marker.cpp  calibration.cpp  chain.cpp  chroma_key.cpp  cl_kernel.cpp  cross.cpp  cv_utils.cpp  d_dummy_camera.cpp  delta_loop.cpp  dnn_cl_utils.cpp  dnn_common.cpp  eox_globals.cpp  epi_util.cpp  kernel.cpp  low_pass_filter.cpp  ocl_container.cpp  ocl_data.cpp  ocl_filters.cpp  ocl_interop.cpp  pose.cpp  pose_agnostic.cpp  pose_aux.cpp  pose_detector.cpp  pose_pipeline.cpp  pose_pipeline_aux.cpp  pose_pipeline_debug.cpp  pose_roi.cpp  roi_body_heuristics.cpp  simple_shader.cpp  ssd_anchors.cpp  stereo_camera.cpp  texture_1.cpp  thread_pool.cpp  (+3 more)
sources/fbgtk/: cam_params_window.cpp  file_boot.cpp  file_boot_cam.cpp  file_boot_filters.cpp  file_boot_gui.cpp  file_boot_logic.cpp  file_worker.cpp  file_worker_calib.cpp  file_worker_cam.cpp  file_worker_compose.cpp  file_worker_filters.cpp  file_worker_gui.cpp  file_worker_pose.cpp  gl_image.cpp  gtk_cam_params.cpp  gtk_config_stack.cpp  json_config.cpp  json_ocv.cpp  simple_image_window.cpp  small_button.cpp
sources/imgui/: imgui_boot.cpp
src/: main.cpp
src/boot/: file_boot.cpp  file_boot.h  gtk_boot.cpp  gtk_boot.h
src/marks/dnn/roi/: pose_roi.h
xmotion/algo/: calibration.h  cross.h  i_logic.h  pose.h  triangulation.h
xmotion/boot/: boot.h  extended_boot.h  file_boot.h  gtk_boot.h  updated_boot.h
xmotion/camera/: d_dummy_camera.h  stereo_camera.h
xmotion/core/algo/: calibration.h  chain.h  compose.h  cross.h  i_logic.h  pose.h
xmotion/core/boot/: a_updated_boot.h  i_boot.h
xmotion/core/camera/: d_dummy_camera.h  stereo_camera.h
xmotion/core/dnn/: pose_agnostic.h  pose_pipeline.h
xmotion/core/dnn/net/: blaze_pose.h  dnn_cl_utils.h  dnn_common.h  dnn_runner.h  pose_detector.h  pose_roi.h  roi_predictor.h  ssd_anchors.h
xmotion/core/filter/: a_filter.h  bg_lbp_subtract.h  bg_subtract.h  blur.h  chroma_key.h  i_filter.h
xmotion/core/ocl/: cl_kernel.h  kernel.h  ocl_container.h  ocl_data.h  ocl_filters.h  ocl_interop.h  ocl_interop_ext.h  ocl_kernels.h  ocl_kernels_bgs.h  ocl_kernels_chromakey.h  ocl_kernels_flip.h
xmotion/core/ogl/: texture_1.h
xmotion/core/pose/: pose_agnostic.h
xmotion/core/pose/body/: body_marker.h
xmotion/core/pose/detector/: body_detector.h
xmotion/core/pose/roi/: roi_body_heuristics.h
xmotion/core/utils/: cv_utils.h  delta_loop.h  epi_util.h  thread_pool.h  velocity_filter.h  xm_data.h
xmotion/data/: json_config.h  json_ocv.h
xmotion/dnn/: pose_pipeline.h
xmotion/dnn/net/: blaze_pose.h  dnn_common.h  dnn_runner.h  pose_detector.h  pose_roi.h
xmotion/fbgtk/: file_boot.h  file_worker.h
xmotion/fbgtk/data/: json_config.h  json_config_calibration.h  json_config_common.h  json_config_filters.h  json_config_gui.h  json_config_pose.h  json_ocv.h
xmotion/fbgtk/gtk/: cam_params_window.h  gl_image.h  gtk_cam_params.h  simple_image_window.h
xmotion/gtk/: cam_params_window.h  gl_image.h  gtk_cam_params.h  gtk_config_stack.h  simple_image_window.h  small_button.h
xmotion/imgui/: imgui_boot.h
xmotion/marks/dnn/: blaze_pose.h  pose_detector.h
xmotion/marks/dnn/roi/: roi_predictor.h
xmotion/utils/: cv_utils.h  eox_globals.h
